# kai-kj

./: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
agent/: README.md  pyproject.toml
agent/src/kai_agent/: __init__.py  extraction.py  graph.py  nodes.py  run.py  server.py  state.py
agent/src/kai_agent/services/: billable_engine.py  integrations.py  kie_ocr.py  work_order.py
scripts/: check-supabase.mjs  provision-vercel-supabase.mjs  sync-vercel-env.mjs
src/: middleware.ts  proxy.ts
src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts
src/components/: AccountEmailCard.tsx  AccountingSyncBadge.tsx  AuthNav.tsx  BillableBadge.tsx  BulkUpload.tsx  CardBadge.tsx  CategoryBadge.tsx  ExpenseDateSortBar.tsx  ExpenseExportButton.tsx  ExpenseList.tsx  ExpensePeriodFilterBar.tsx  HomePage.tsx  InstallPrompt.tsx  LandingPage.tsx  LiveDashboard.tsx  MobileLiveFeed.tsx  ReceiptImageViewer.tsx  ReceiptLineItemsList.tsx  ReceiptScanner.tsx  ReceiptTransactionEditForm.tsx  ReconcileBadge.tsx  ScanToast.tsx  SidebarCardFolders.tsx  SidebarReceiptFolders.tsx  SidebarReceiptWidgets.tsx  SummaryBar.tsx  WorkOrderBadge.tsx  icons.tsx
src/config/: billable-rules.json
src/lib/: account-id.ts  accounting-decision.ts  accounting-export.ts  accounting-fields.ts  agent-scan-preference.ts  billable-engine.ts  bulk-upload-files.ts  card-last-four.ts  categories.ts  cc-ledger-types.ts  credit-card-reconcile-fields.ts  expense-api.ts  expense-context.tsx  expense-grouping.ts  expense-ledger-row.ts  (+38 more)
supabase/: config.toml
(+86 files in other folders)
